syntax = "proto3";

import "google/protobuf/empty.proto";
option java_multiple_files = true;
option java_package = "management";
package management;

// Management Service contract operations
service ManagementService {
  // ping server for testing service availability
  rpc IsAlive(RequestTimestamp) returns (PingResponse);

  // increase the number of instances of the gRPC server
  rpc ChangeGRPCServerInstances(InstanceCount) returns (google.protobuf.Empty);

  // increase the number of instances of the image processing server
  rpc ChangeImageProcessingInstances(InstanceCount) returns (google.protobuf.Empty);
}

message RequestTimestamp {
  string timestamp = 1;
}

message PingResponse {int32 ping = 1;}

message InstanceCount {
  int32 count = 1;
}